[project]
name = "superinstance-runtime"
version = "0.1.0"
description = "Unified runtime with COLLECT → SELECT → COMPILE event bus"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
